# MMTQA

./: .env  .gitignore  README.md  bleu_language_stats.csv  bleu_scores_summary.csv  blue_score.py  combined_data.py  combined_eval.jsonl  combined_gemma_data.jsonl  combined_qwen2.5_32B.jsonl  combined_qwen2.5_7B.jsonl  dataset_en.jsonl  demo_dataset.jsonl  demo_jsonl.py  evaluate_metrics.py  evaluation_metrics.py  latest_combined.py  metrics_output.json  pyproject.toml  requirements.txt  streamlit_run.py  wiki.json
data/benchmark_data/: wikisql_39955c78b7.json  wikisql_c24d04a09e.json  wikisql_e6ee992482.json
data/processed/: golden_answer_verification_results_v2.jsonl
results/: summary_google_gemma-3-4b-it_multitableqa_clean_default_20251022_042714.json
src/: bleu_language_stats.csv  bleu_scores_summary.csv  config.py
src/configs/: collection_config.py  qa_config.py  qa_translation_config.py  rendering_config.py  translation_config.py
src/data_collection/: axriv_collector.py  base_collector.py  finqa_collector.py  github_collector.py  run_collection.py  tables_count.py  wikitables_collector.py
src/evaluation/: config.py  data_loader.py  prompts.py  run_evaluation.py
src/filtering/: arxiv_nulldata_remover.py  character_count.py  character_stats.json  duplicate_finder.py  file_filtering.py  file_filtering_using_median.py  github_rows_capping.py  tables_scoring.py  top100_tables.py  wordCount.py
src/qa_generation/: prompts.py  qa_generator.py  run_qa_generation.py
src/qa_translation/: prompts.py  run_qa_translation.py  translator.py
src/rendering/: html_styler.py  noise_injector.py  renderer.py  run_rendering.py
src/summary/: character_stats.json  filter_summary.json  finqa_table_score.json  (+2 more)
(+39336 files in other folders)
