[project]
name = "mmtqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "datasets>=4.1.1",
    "datasketch>=1.6.5",
    "huggingface-hub>=0.35.3",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
